--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   font-family: sans-serif;
   height: 100vh;
-  justify-content: center;
+  justify-content: space-between;
   width: 100%;
 }
 
